<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/fragment_traininglist"
            android:icon="@drawable/trainingsplan"
            android:title="@string/menu_training" />
        <item
            android:id="@+id/fragment_exercise"
            android:icon="@drawable/exercises"
            android:title="@string/menu_excersise" />


        <item
            android:id="@+id/fragment_profile"
            android:icon="@drawable/icon_profile_placeholder"
            android:title="@string/home_profile" />

        <item
        android:id="@+id/fragment_userinput"
        android:icon="@drawable/icon_profile_placeholder"
        android:title="Fürs erstellen Userinput" />
    </group>
</menu>