<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="PME.myfitnessbuddy.view.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/fragment_traininglist"
        android:name="PME.myfitnessbuddy.view.ui.training.TrainingListFragment"
        android:label="@string/tab_text_1"
        tools:layout="@layout/fragment_traininglist" />

    <fragment
        android:id="@+id/fragment_exercise"
        android:name="PME.myfitnessbuddy.view.ui.exercise.ExerciseFragment"
        android:label="@string/tab_text_2"
        tools:layout="@layout/fragment_exercise" />
</navigation>