<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backround4">

        <ImageView
            android:id="@+id/fragment_profile_image"
            android:layout_width="166dp"
            android:layout_height="216dp"
            android:layout_marginStart="120dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="125dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/dumbell"
            tools:srcCompat="@tools:sample/avatars" />

        <View
            android:id="@+id/view6"
            android:layout_width="250dp"
            android:layout_height="1dp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="81dp"
            android:background="@color/accent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_profile_profilename_textview" />

        <TextView
            android:id="@+id/fragment_profile_profilename_textview"
            style="@style/WhiteText"
            android:layout_width="204dp"
            android:layout_height="47dp"
            android:layout_marginStart="103dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="104dp"
            android:text="@string/profile_username_label"
            android:textAlignment="center"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_profile_image" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            style="@style/TransparentPrimaryBackround"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view6">

            <TextView
                android:id="@+id/firststart_label_age_textview"
                style="@style/WhiteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:layout_marginTop="15dp"
                android:text="@string/profile_age_label"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/firststart_label_gender_textview"
                style="@style/WhiteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:layout_marginTop="9dp"
                android:text="@string/profile_gender_label"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/firststart_label_age_textview" />

            <TextView
                android:id="@+id/fragment_profile_age_textview"
                style="@style/WhiteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="45dp"
                android:text="@string/profile_default_textview"
                android:textAlignment="viewEnd"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/fragment_profile_gender_textview"
                style="@style/WhiteText"
                android:layout_width="124dp"
                android:layout_height="32dp"
                android:layout_marginTop="9dp"
                android:layout_marginEnd="45dp"
                android:text="@string/profile_default_textview"
                android:textAlignment="viewEnd"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_profile_age_textview" />

            <TextView
                android:id="@+id/fragment_profile_bodyweight_textview"
                style="@style/WhiteText"
                android:layout_width="148dp"
                android:layout_height="31dp"
                android:layout_marginTop="9dp"
                android:layout_marginEnd="45dp"
                android:text="@string/profile_default_textview"
                android:textAlignment="viewEnd"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_profile_height_textview" />

            <TextView
                android:id="@+id/fragment_profile_height_textview"
                style="@style/WhiteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:layout_marginEnd="45dp"
                android:text="@string/profile_default_textview"
                android:textAlignment="viewEnd"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_profile_gender_textview" />

            <TextView
                android:id="@+id/firststart_label_height_textview"
                style="@style/WhiteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:layout_marginTop="9dp"
                android:text="@string/profile_height_label"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/firststart_label_gender_textview" />

            <TextView
                android:id="@+id/firststart_label_bodyweight_textview"
                style="@style/WhiteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:layout_marginTop="9dp"
                android:text="@string/profile_bodyweight_label"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/firststart_label_height_textview" />

            <View
                android:id="@+id/view7"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/firststart_label_bodyweight_textview" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TransparentPrimaryBackround"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

            <TextView
                android:id="@+id/fragment_profile_label_update_bodyweight_textview"
                style="@style/WhiteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="89dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="89dp"
                android:text="@string/profile_update_bodyweight_label"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view8"
                android:layout_width="250dp"
                android:layout_height="1dp"
                android:layout_marginStart="80dp"
                android:layout_marginEnd="81dp"
                android:background="@color/accent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_profile_label_update_bodyweight_textview" />

            <EditText
                android:id="@+id/fragment_profile_update_bodyweight_input_number"
                style="@style/defaultEditText"
                android:layout_width="55dp"
                android:layout_height="44dp"
                android:layout_marginStart="45dp"
                android:layout_marginTop="11dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="KG"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textColorHint="@color/accent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view8" />

            <Button
                android:id="@+id/fragment_profile_update_bodyweight_button"
                style="@style/defaultButton"
                android:layout_width="138dp"
                android:layout_height="36dp"
                android:layout_marginTop="11dp"
                android:layout_marginEnd="45dp"
                android:text="@string/profile_update_bodyweight_button"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view8" />

            <View
                android:id="@+id/view10"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="7dp"
                android:background="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_profile_update_bodyweight_input_number" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TransparentPrimaryBackround"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

            <TextView
                android:id="@+id/fragment_profile_label_bodymetric_textview"
                style="@style/WhiteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="159dp"
                android:layout_marginEnd="165dp"
                android:text="@string/profile_bmi_label"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view9"
                android:layout_width="250dp"
                android:layout_height="1dp"
                android:layout_marginStart="81dp"
                android:layout_marginEnd="80dp"
                android:background="@color/accent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_profile_label_bodymetric_textview" />

            <TextView
                android:id="@+id/fragment_profile_bmi_textview"
                style="@style/WhiteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="45dp"
                android:text="@string/profile_calculate_bmi_default"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view9" />

            <TextView
                android:id="@+id/fragment_profile_label_bmi_textview"
                style="@style/WhiteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:layout_marginTop="10dp"
                android:text="@string/profile_actual_bmi_label"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view9" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>