<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backround4">

        <Button
            android:id="@+id/firststart_userinput_button"
            style="@style/defaultButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:text="@string/create_training_next_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"></Button>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            style="@style/TransparentPrimaryBackround"
            android:layout_width="393dp"
            android:layout_height="186dp"
            android:layout_marginTop="31dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <TextView
                android:id="@+id/firststart_label_age_textview"
                style="@style/WhiteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:layout_marginTop="15dp"
                android:text="@string/profile_age_label"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/firststart_label_gender_textview"
                style="@style/WhiteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:layout_marginTop="9dp"
                android:text="@string/profile_gender_label"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/firststart_label_age_textview" />

            <TextView
                android:id="@+id/firststart_label_height_textview"
                style="@style/WhiteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:layout_marginTop="9dp"
                android:text="@string/profile_height_label"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/firststart_label_gender_textview" />

            <TextView
                android:id="@+id/firststart_label_bodyweight_textview"
                style="@style/WhiteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:layout_marginTop="9dp"
                android:text="@string/profile_bodyweight_label"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/firststart_label_height_textview" />

            <EditText
                android:id="@+id/editTextNumber"
                android:layout_width="219dp"
                android:layout_height="33dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:ems="10"
                android:inputType="number"
                android:textAlignment="textEnd"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="198dp"
                android:layout_height="31dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="32dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Name"
                android:textAlignment="textEnd"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />

            <EditText
                android:id="@+id/editTextNumberDecimal"
                android:layout_width="221dp"
                android:layout_height="33dp"
                android:layout_marginTop="9dp"
                android:layout_marginEnd="32dp"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textAlignment="textEnd"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/firststart_label_gender_textview" />

            <EditText
                android:id="@+id/editTextNumberDecimal2"
                android:layout_width="170dp"
                android:layout_height="31dp"
                android:layout_marginTop="9dp"
                android:layout_marginEnd="32dp"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textAlignment="textEnd"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimal" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="196dp"
            android:layout_height="203dp"
            android:layout_marginStart="98dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="99dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="324dp"
            android:layout_height="92dp"
            android:layout_marginStart="34dp"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="34dp"
            android:text="Bevor du starten kannst, benötigen wir noch kurz ein paar Infos über dich"
            android:textAlignment="center"
            android:textColor="@color/accent"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>